syntax = "proto3";

package examplepb;

option go_package = "github.com/018bf/example/pkg/examplepb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message SessionCreate {
  string title = 1;
  string description = 2;
}

message SessionGet {
  string id = 1;
}

message SessionUpdate {
  string id = 1;
  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue description = 3;
}

message Session {
  string id = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp created_at = 3;
  string title = 4;
  string description = 5;
}

message ListSession {
  repeated Session items = 1;
  uint64 count = 2;
}

message SessionDelete {
  string id = 1;
}

message SessionFilter {
  google.protobuf.UInt64Value page_number = 1;
  google.protobuf.UInt64Value page_size = 2;
  repeated string order_by = 3;
  repeated string ids = 4;
  google.protobuf.StringValue search = 5;
}

service SessionService {
  rpc Create(examplepb.SessionCreate) returns (examplepb.Session);
  rpc Get(examplepb.SessionGet) returns (examplepb.Session);
  rpc Update(examplepb.SessionUpdate) returns (examplepb.Session);
  rpc Delete(examplepb.SessionDelete) returns (google.protobuf.Empty);
  rpc List(examplepb.SessionFilter) returns (examplepb.ListSession);
}